// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegularSpec 1`] = `
<DocumentFragment>
  <div>
    <h4
      class="mode-title"
    >
      Explicit HTTP(S) Proxy
    </h4>
    <p
      class="mode-description"
    >
      You manually configure your client application or device to use an HTTP(S) proxy.
    </p>
    <div>
      <div
        class="mode-entry"
      >
        <input
          checked=""
          id="mode-checkbox-«r0»"
          name="mode-checkbox-«r0»"
          type="checkbox"
        />
        <label
          for="mode-checkbox-«r0»"
          style="margin-bottom: 0px; font-weight: normal;"
        >
          Run HTTP/S Proxy
        </label>
        <div
          class="mode-popover"
        >
          <button
            popovertarget="«r1»"
          >
            <i
              aria-hidden="true"
              class="fa fa-cog"
            />
          </button>
          <div
            id="«r1»"
            popover="auto"
          >
            <h4>
              Advanced Configuration
            </h4>
            <p>
              Listen Host
            </p>
            <span
              class="inline-input mode-input"
              tabindex="0"
            />
            <p>
              Listen Port
            </p>
            <span
              class="inline-input mode-input"
              placeholder="8080"
              tabindex="0"
            />
          </div>
        </div>
      </div>
      <div
        class="mode-status"
      >
        <div>
          <div
            class="text-success"
          >
            HTTP(S) proxy listening at 127.0.0.1:8080 and [::1]:8080.
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RegularSpec 2`] = `
<DocumentFragment>
  <div>
    <h4
      class="mode-title"
    >
      Explicit HTTP(S) Proxy
    </h4>
    <p
      class="mode-description"
    >
      You manually configure your client application or device to use an HTTP(S) proxy.
    </p>
    <div>
      <div
        class="mode-entry"
      >
        <input
          checked=""
          id="mode-checkbox-«r2»"
          name="mode-checkbox-«r2»"
          type="checkbox"
        />
        <label
          for="mode-checkbox-«r2»"
          style="margin-bottom: 0px; font-weight: normal;"
        >
          Run HTTP/S Proxy
        </label>
        <div
          class="mode-popover"
        >
          <button
            popovertarget="«r3»"
          >
            <i
              aria-hidden="true"
              class="fa fa-cog"
            />
          </button>
          <div
            id="«r3»"
            popover="auto"
          >
            <h4>
              Advanced Configuration
            </h4>
            <p>
              Listen Host
            </p>
            <span
              class="inline-input mode-input"
              tabindex="0"
            />
            <p>
              Listen Port
            </p>
            <span
              class="inline-input mode-input"
              placeholder="8080"
              tabindex="0"
            />
          </div>
        </div>
      </div>
      <div
        class="mode-status"
      >
        <div
          class="text-danger"
        >
          port already in use
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
